--- a/biblo.bib
+++ b/biblo.bib
@@ -695,3 +695,13 @@ url="https://drive.google.com/file/d/11O9U-dOV0R6z5rNibazUAKzFiaCoNwJa/view?usp=
 }
 
 
+
+@book{hynekAutomaticEvaluationInformation2015,
+  title = {Automatic Evaluation of Information Dashboard Usability},
+  author = {Hynek, Ji{\v r}{\'i} and Hruska, Tomas},
+  year = {2015},
+  month = apr,
+  pages = {133},
+  doi = {10.15224/978-1-63248-044-6-118},
+  file = {C\:\\Users\\lenovo\\Zotero\\storage\\8CURCY42\\Hynek et Hruska - 2015 - Automatic evaluation of information dashboard usab.pdf}
+}
