--- a/parts/Implementation.tex
+++ b/parts/Implementation.tex
@@ -83,11 +83,11 @@ Power BI is an interactive data visualization software product developed by Micr
     \caption{Microsoft Power BI Logo.}
     \label{fig:powerBi}
 \end{figure}
-\subsubsection{Tableau Vs Power BI}
+\subsubsection{Tableau Vs. Power BI}
 Microsoft Power BI and Tableau are two of the top business intelligence (BI) and data analytics platforms in the market. As two highly regarded analytics platforms, users often are forced to choose between Power BI and Tableau. There are arguments for and against each tool\cite{robbPowerBIVs2022}.
 \begin{itemize}
     \renewcommand{\labelitemi}{$\bullet$}
-    \item Microsoft wins in terms of breadth of service due to its ecosystem of integrated platforms. But Tableau perhaps comes out ahead when it comes to depth of analysis and the kind of robust, intuitive features that data scientists and analysts need for competitive advantage.
+    \item Microsoft wins in terms of breadth of service due to its ecosystem of integrated platforms. However, Tableau perhaps comes out ahead when it comes to depth of analysis and the kind of robust, intuitive features that data scientists and analysts need for competitive advantage.
     \item Power BI wins on broad usage by a non-technical audience whereas Tableau has the edge with technical users.
     \item Power BI is that it supports various data sources but has limited access to other databases and servers compared to Tableau, while Tableau Software has access to numerous data sources and servers such as Excel, Text File, PDF, JSON and others but it does not connect natively to XML files.
     \item Both are not free, the difference is only in the prices
@@ -115,7 +115,7 @@ JavaScript\cite{JavaScriptCom} is a dynamic programming language that's used for
 \paragraph*{Highcharts:}
 Highcharts is a software library for charting written in pure JavaScript meant to enhance web applications by adding interactive charting capability. 
 It has all the tools needed to create reliable and secure data visualizations by
-providing a wide variety of charts. For example, line charts, spline charts, area charts, bar charts, pie charts and so on.They offer wrappers for the most popular programming languages (.Net, PHP, Python, R, Java) as well as iOS and Android, and frameworks like Angular, Vue, and React\cite{InteractiveJavascriptCharts}. 
+providing a wide variety of charts. For example, line charts, spline charts, area charts, bar charts, pie charts and so on. They offer wrappers for the most popular programming languages (.Net, PHP, Python, R, Java) as well as iOS and Android, and frameworks like Angular, Vue, and React\cite{InteractiveJavascriptCharts}. 
 \begin{figure}[h!]
     \center
     \includegraphics[width=0.50\textwidth]{images/chapter4/jshigh.png}
@@ -143,8 +143,13 @@ In the data preparation stage, the data is output from the integration stage usi
 \end{figure}
 
 \subsection{Dashboards}
-The presented dashboards illustrate some different ways we can visualize some relevant patient data we obtained.\\
-Both dashboards are a web application developed using bootstrap\cite{IntroductionBootstrapV5}  framework and the Highcharts  library.
+\cite{hynekAutomaticEvaluationInformation2015} Defines a dashboard as:
+\begin{displayquote}
+    "A visual display of the most important information needed to achieve one or more objectives; consolidated and arranged on a single screen so the information can be monitored at a glance". \end{displayquote}
+
+HealthViz dashboard application (illustrated in the following pictures), is a web application developed using bootstrap\cite{IntroductionBootstrapV5}  framework and the Highcharts  library in order to display the right insight for each user.\\
+This application represent the image data phase we already mentioned. 
+
 
 \begin{itemize}
     \renewcommand{\labelitemi}{$\bullet$}
