--- a/parts/dataVis.tex
+++ b/parts/dataVis.tex
@@ -24,11 +24,11 @@ Human mind is very visual, following Williams et al., visualization is “a cogn
   \end{figure}
 
 
-  Data visualization involves presenting data in graphical or pictorial form which makes the information easy to understand. It helps to explain facts and determine courses of action. It will benefit any field of study that requires innovative ways of presenting large, complex information\cite{spence2001information}.
+  Data visualization involves presenting data in graphical or pictorial form, which makes the information easy to understand. It helps to explain facts and determine courses of action. It will benefit any field of study that requires innovative ways of presenting large, complex information\cite{spence2001information}.
 
 
 
-  Traditionally, data visualization has been structured along two main fields: scientific visualization and information visualization. A third, newer field, called visual analytics has emerged in the past several years, as a bridge between and also an extension of the former two fields\cite{teleaDataVisualizationPrinciples2008}. In this paper we will focus mainly on the information visualization field.
+  Traditionally, data visualization has been structured along two main fields: scientific visualization and information visualization. A third, newer field, called visual analytics has emerged in the past several years, as a bridge between and also an extension of the former two fields\cite{teleaDataVisualizationPrinciples2008}. In this paper, we will focus mainly on the information visualization field.
 \newpage
 \section{Definition}
 Information visualization (InfoVis) is the practice of representing data in a meaningful, visual way that users can interpret and easily comprehend, it is a research area that aims to aid users in exploring, understanding, and analyzing data through progressive, iterative visual exploration. With the boom in big data analytics, InfoVis is being widely used in a variety of data analysis applications in different domains, ranging from finance to sports to politics\cite{liuSurveyInformationVisualization2014}.
@@ -68,7 +68,7 @@ As science progresses, this model has been detailed, Figure \ref{fig:infovispipe
  
 \begin{enumerate}
   \item \textbf{\textit{Raw data:}} First, we have to import the data. This implies finding a representation of the original information we want to investigate in terms of a data set. Practically, importing data means choosing a specific dataset implementation and converting the original information to the representation implied by the chosen dataset in order to turn this data into information using Data analysis.
-  \item \textbf{\textit{Data Analysis:}} Is the process of bringing order and structure to collected data. mostly using data warehouse systems (\ref{sec:dataWarehouse}), It turns data into information  that teams can use. Analysis is done using systematic methods to look for trends, groupings, or other relationships between different types of data\cite{DataAnalysisVisualization}, following this process:
+  \item \textbf{\textit{Data Analysis:}} Is the process of bringing order and structure to collected data. Mostly using data warehouse systems (\ref{sec:dataWarehouse}), it turns data into information that teams can use. Analysis is done using systematic methods to look for trends, groupings, or other relationships between different types of data\cite{DataAnalysisVisualization}, following this process:
   \begin{itemize}
     \renewcommand{\labelitemi}{$\bullet$}
   \item \textbf{\textit{Data Requirements Specification:}} The data required for analysis is based on a question or an experiment. Based on the requirements of those directing the analysis, the data necessary as inputs to the analysis is identified (e.g., Population of people). Specific variables regarding a population (e.g., Age and Income) may be specified and obtained. Data may be numerical or categorical\cite{DataAnalysisProcess}.
@@ -89,7 +89,7 @@ As science progresses, this model has been detailed, Figure \ref{fig:infovispipe
 
 \section{Data Warehouse Systems}
 \label{sec:dataWarehouse}
-The concept of "data warehousing" arose in the mid 1980s with the intention to support huge information analysis and management reporting\cite{wahDevelopmentDataWarehouse2009}. Data warehouse was defined According to Bill Inmon a “subject-oriented, integrated, time variant and non-volatile collection of data in support of management’s decision making process”\cite{inmonBuildingDataWarehouse2005}.
+The concept of "data warehousing" arose in the mid-1980s with the intention to support huge information analysis and management reporting\cite{wahDevelopmentDataWarehouse2009}. Data warehouse was defined According to Bill Inmon a “subject-oriented, integrated, time variant and non-volatile collection of data in support of management’s decision making process”\cite{inmonBuildingDataWarehouse2005}.
  
  
 According to Ralph Kimball "a data warehouse is a system that extracts, cleans, conforms, and delivers source data into a dimensional data store and then supports and implements querying and analysis for the purpose of decision making"\cite{kimballDataWarehouseETLToolkit2011}.
@@ -128,5 +128,5 @@ It is also used to feed data warehouses. This approach does not replace ETL.
 \input{Tables/chapter2/Integration_Approaches_comparaison.tex}
 
 \section{Conclusion}
-In this chapter, we went through the definition of Information visualization, presenting the visualization pipeline process, then moving to the data warehouse and its different data integration approaches.\\
+In this chapter, we went through the definition of Information visualization, presenting the visualization pipeline process, and then moving to the data warehouse and its different data integration approaches.\\
 In the next chapter, we present our contribution based on the different concepts we have already seen in the previous chapters.
