--- a/parts/health_and_data.tex
+++ b/parts/health_and_data.tex
@@ -144,7 +144,7 @@ One of the important ethical issues in electronic records management involves pr
 There are a number of security dilemmas in electronic records management. There can be illegal access and use of records, data alteration and destruction (Stair and Reynolds 2006: 583).
 
 \bigbreak
-Typical cross-organisational e-health applications are\cite{ruotsalainenCrossplatformModelSecure2004}: 
+Typical cross-organizational e-health applications are\cite{ruotsalainenCrossplatformModelSecure2004}: 
 \begin{itemize}
 \renewcommand{\labelitemi}{$\bullet$}
 \item sharing of patient records among different healthcare professionals. 
@@ -158,7 +158,7 @@ Typical cross-organisational e-health applications are\cite{ruotsalainenCrosspla
 That is why Electronic health records management attracts significant international interest and sets the scenery for the establishment of a distributed, coalition-based, security policy enhanced records exchange framework among different medical domains. Several European projects have proposed candidate solutions for secure inter-operations between medical domains. In the HARP project, security profiles related to access rights are dynamically downloaded to the client side. The MEDITRAV EUproject attempts to overcome national or linguistic barriers by adopting the solution of a multilingual portable personal record. These approaches, pose mainly their research effort on the security requirements for effective electronic health record management, still they confront mainly to stable infrastructures\cite{belsisPervasiveSecureElectronic2005}.
 
 \section{Conclusion}
-We have seen in this chapter the principal components of the healthcare sector from its principal actors through its activities to the data generated from each activity. Then we moved to the different medical electronic records management types, and we presented the differences between them. Finally we moved on to the importance of the security field in the treatment of the patient data and medical data, then we did a quick overview of some of the projects implemented in this regard.
+We have seen in this chapter the principal components of the healthcare sector from its principal actors through its activities to the data generated from each activity. Then we moved to the different medical electronic records management types, and we presented the differences between them. Finally, we moved on to the importance of the security field in the treatment of the patient data and medical data, then we did a quick overview of some of the projects implemented in this regard.
 
 
-In the next chapter we will present the Information visualization field and its applications.
+In the next chapter, we will present the Information visualization field and its applications.
