--- a/parts/introduction.tex
+++ b/parts/introduction.tex
@@ -24,7 +24,7 @@ Medical informatics as a discipline is still young, in particular when you compa
 
 
 \section{Problem \& motivation}
-With the progress of health information technology the healthcare data is increasingly digitized and, like in most other industries, data is growing in Velocity, Volume and Value. According to Statista\cite{HealthcareDataVolume}, the amount of global healthcare data is expected to increase dramatically by the year 2020. Early estimates from 2013 suggest that there were about 153 exabytes of healthcare data generated in that year. However, projections indicate that there could be as much as 2,314 exabytes of new data generated in 2020 (Figure \ref{fig:dataGenerated}).
+With the progress of health information technology, the healthcare data is increasingly digitized and, like in most other industries, data is growing in Velocity, Volume and Value. According to Statista\cite{HealthcareDataVolume}, the amount of global healthcare data is expected to increase dramatically by the year 2020. Early estimates from 2013 suggest that there were about 153 exabytes of healthcare data generated in that year. However, projections indicate that there could be as much as 2,314 exabytes of new data generated in 2020 (Figure \ref{fig:dataGenerated}).
 
 \begin{figure}[h!]
     \center
